# fedal-api

./: .gitignore  Dockerfile  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml
fedal_api/: asgi.py  settings.py  urls.py  wsgi.py
